@@ -49,6 +49,12 @@ mNSeff.default <- function (sim, obs, j=1, na.rm=TRUE, ...){
 
 mNSeff.matrix <- function (sim, obs, j=1, na.rm=TRUE, ...){ 
 
+  # Checking that 'sim' and 'obs' have the same dimensions
+  if ( all.equal(dim(sim), dim(obs)) != TRUE )
+    stop( paste("Invalid argument: dim(sim) != dim(obs) ( [", 
+          paste(dim(sim), collapse=" "), "] != [", 
+          paste(dim(obs), collapse=" "), "] )", sep="") )
+
   NS1 <- rep(NA, ncol(obs))       
           
   NS1 <- sapply(1:ncol(obs), function(i,x,y) { 
