@@ -35,6 +35,12 @@ mse.default <- function (sim, obs, na.rm=TRUE, ...){
   
 mse.matrix <- function (sim, obs, na.rm=TRUE, ...){
 
+  # Checking that 'sim' and 'obs' have the same dimensions
+  if ( all.equal(dim(sim), dim(obs)) != TRUE )
+    stop( paste("Invalid argument: dim(sim) != dim(obs) ( [", 
+          paste(dim(sim), collapse=" "), "] != [", 
+          paste(dim(obs), collapse=" "), "] )", sep="") )
+
    mse <- colMeans( (sim - obs)^2, na.rm= na.rm)        
                     
    return(mse)
