@@ -42,6 +42,12 @@ nrmse.default <- function (sim, obs, na.rm=TRUE, norm="sd", ...) {
   
 nrmse.matrix <- function (sim, obs, na.rm=TRUE, norm="sd", ...) {
 
+  # Checking that 'sim' and 'obs' have the same dimensions
+  if ( all.equal(dim(sim), dim(obs)) != TRUE )
+    stop( paste("Invalid argument: dim(sim) != dim(obs) ( [", 
+          paste(dim(sim), collapse=" "), "] != [", 
+          paste(dim(obs), collapse=" "), "] )", sep="") )
+          
   # Checking that the user provied a valid argument for 'norm'       
   if (is.na(match(norm, c("sdobs", "maxmin") ) ) ) 
      stop("Invalid argument: 'norm' must be in c('sd', 'maxmin')")
