@@ -45,6 +45,12 @@ pbias.default <- function (sim, obs, na.rm=TRUE, ...){
   
 pbias.matrix <- function (sim, obs, na.rm=TRUE, ...){
 
+   # Checking that 'sim' and 'obs' have the same dimensions
+   if ( all.equal(dim(sim), dim(obs)) != TRUE )
+    stop( paste("Invalid argument: dim(sim) != dim(obs) ( [", 
+          paste(dim(sim), collapse=" "), "] != [", 
+          paste(dim(obs), collapse=" "), "] )", sep="") )
+
    pbias <- rep(NA, ncol(obs))       
           
    pbias <- sapply(1:ncol(obs), function(i,x,y) { 
