@@ -51,6 +51,12 @@ rsr.default <- function (sim, obs, na.rm=TRUE, ...){
   
 rsr.matrix <- function (sim, obs, na.rm=TRUE, ...){
 
+  # Checking that 'sim' and 'obs' have the same dimensions
+  if ( all.equal(dim(sim), dim(obs)) != TRUE )
+    stop( paste("Invalid argument: dim(sim) != dim(obs) ( [", 
+          paste(dim(sim), collapse=" "), "] != [", 
+          paste(dim(obs), collapse=" "), "] )", sep="") )
+
     rsr <- rep(NA, ncol(obs))       
           
     rsr <- sapply(1:ncol(obs), function(i,x,y) { 
