@@ -31,6 +31,8 @@ NEWS/ChangeLog for hydroGOF
 			   -) 'legend' argument was removed (it was not used)
 			   -) 'leg.cex' argument was removed (it was not used)
 	o 'NSeff': its name was changed to 'NSE'. The old name 'NSeff' is deprecated but is still working for backwards compatibility.
+	o New dimension checking (number of columns and rows) for all the functions that are apllied over a matrix or data.frame
+	
 
 0.2-2	14-Apr-2011
 	o new function: 'KGE', Kling-Gupta efficiency
